updated my details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,21 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a Graphic Designer learning to code to become a Front End Developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in the Philippines and moved Southern California when I was 8 years old.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Aside from working out regularly, I like to draw, go on hikes, watch scary movies,
+        and just staying active.
+      </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job would be where I'm able to use the skills I've learned to help others
+        with their own dreams from start to finish.
+      </p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I grew up in Southern California and have lived in Austin for 7 months now.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to upgrade my skills and make me a more competitive Graphic Designer.</p>
     </section>
 
     <footer id="footer">
