Added target value to open to new tab on GitHub link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="https://github.com/aroblesgalit">Github</a></li>
+          <li><a href="https://github.com/aroblesgalit" target="_blank">Github</a></li>
         </ul>
     </footer>
 </body>
